Fix display of wrapped hero headings

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -330,8 +330,9 @@ figure {
             padding: 8rem 4rem;
         }
     }
-
+    
     h1 > a {
+        display: inline-block;
         padding: 0 .5em;
         padding-top: .1em;
         border-radius: 5px;
